--- a/src/pages/home/home-page.css
+++ b/src/pages/home/home-page.css
@@ -2,10 +2,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
   background-color: #e9e9e9;
   position: relative;
   overflow: hidden;
+  padding-bottom: 100px; /* Espaço para o footer */
 }
 
 .home-content {
